# resume_demo

./: README.md  Readme.md  index.html
projects/deep-learning-computer-vision-foundations/: README.md
projects/embedded-smart-birdcage/: README.md
projects/full-stack-cloud-development/: README.md
projects/iot-automation-sensor-control/: README.md
projects/iov-access-control/: README.md
projects/iov-access-control/docs/: course-report-summary.md  networking-foundation.md
projects/open-cycle-mem/: .gitignore  LICENSE  README.md  opencycle_mem_v03.py  pyproject.toml
projects/open-cycle-mem/cv/: OpenCycle-Mem_CV_Block.tex
projects/open-cycle-mem/docs/: RESULTS_V0_3.md  V0_3_RESEARCH_NOTE.md
projects/open-cycle-mem/results/v0.3_simulation/: summary.csv  summary.json
projects/open-cycle-mem/tests/: test_v03.py
projects/pairing-based-multi-omics-fusion/: README.md
projects/python-collaborative-game/: README.md
